@@ -82,6 +82,8 @@ Change log for zeit.web
 1.71.1 (2015-09-13)
 -------------------
 
+- ZON-2098: Display quotes inside of the article
+
 - HOTFIX: Make legacy areas work with `select_modules` API
 
 
